# rswxpay

./: CLAUDE.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
docs/plans/: 2026-02-06-security-perf-consistency-fixes.md
src/: client.rs  config.rs  error.rs  lib.rs  notify.rs
src/api/: bill.rs  mod.rs  order.rs  prepay.rs  refund.rs
src/cert/: manager.rs  store.rs
src/crypto/: decrypt.rs  mod.rs  sign.rs  verify.rs
src/model/: bill.rs  cert.rs  common.rs  mod.rs  notify.rs  order.rs  prepay.rs  refund.rs
